# readme-2048

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: readme-2048-build.yaml
src/: __init__.py  env.py  game.py  game_round.py  game_storage.py  git.py  main.py
src/templates/: combined_readme.md  game.md  personal.md  readme.md
